--- a/views/add-product.html
+++ b/views/add-product.html
@@ -5,79 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Add product</title>
-    <style>
-      body {
-        padding: 0;
-        margin: 0;
-        font-family: sans-serif;
-      }
-      .main-header {
-        width: 100%;
-        height: 3.5rem;
-        background-color: #dbc441;
-        padding: 0 1.5rem;
-      }
-
-      .main-header-nav {
-        height: 100%;
-        display: flex;
-        align-items: center;
-      }
-      .main-header-item-list {
-        list-style: none;
-        margin: 0;
-        padding: 0;
-        display: flex;
-      }
-      .main-header-item {
-        margin: 0 1rem;
-        padding: 0;
-      }
-      .main-header-item a {
-        text-decoration: none;
-        color: black;
-      }
-      .main-header-item a:hover,
-      .main-header-item a:active,
-      .main-header-item a.active {
-        color: #6200ff;
-      }
-      main {
-        padding: 1rem;
-      }
-      .form-control {
-        margin: 1rem 0;
-      }
-      .form-control lable,
-      .form-control input {
-        display: block;
-        width: 100%;
-      }
-
-      .form-control input {
-        border: 1px solid #dbc441;
-        font: inherit;
-        border-radius: 2px;
-      }
-      button {
-        font: inherit;
-        border: 1px solid #6200ff;
-        background-color: white;
-        border-radius: 3px;
-        color: #6200ff;
-        cursor: pointer;
-      }
-      button:hover,
-      button:active {
-        background-color: #6200ff;
-        color: white;
-      }
-      .product-form {
-        width: 20rem;
-        max-width: 90%;
-        margin: auto;
-      }
-    </style>
+    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/css/product.css" />
   </head>
   <body>
     <header class="main-header">
