--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -1,10 +1,10 @@
-<%- include('includes/head.ejs') %>
+<%- include('../includes/head.ejs') %>
 <link rel="stylesheet" href="/css/forms.css">
 <link rel="stylesheet" href="/css/product.css">
 </head>
 
 <body>
-  <%- include('includes/navegation.ejs') %>
+  <%- include('../includes/navegation.ejs') %>
   <main>
     <form class="product-form" action="/admin/add-product" method="POST">
       <div class="form-control">
@@ -15,4 +15,4 @@
       <button class="btn" type="submit">Add Product</button>
     </form>
   </main>
-  <%- include('includes/head.ejs') %>
+  <%- include('../includes/head.ejs') %>
