--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -1,10 +1,10 @@
-<%- include('includes/head.ejs') %>
+<%- include('../includes/head.ejs') %>
 <link rel="stylesheet" href="/css/forms.css">
 <link rel="stylesheet" href="/css/product.css">
 </head>
 
 <body>
-  <%- include('includes/navegation.ejs') %>
+  <%- include('../includes/navegation.ejs') %>
   <main>
     <% if(prods.length > 0) { %>
     <div class="grid">
@@ -33,4 +33,4 @@
     <h1>No products found</h1>
     <% } %>
   </main>
-  <%- include('includes/head.ejs') %>
+  <%- include('../includes/head.ejs') %>
